rateLimit check before throttleCounter check

--- a/MvcThrottle.Demo/Web.config
+++ b/MvcThrottle.Demo/Web.config
@@ -47,7 +47,7 @@
   </runtime>
 
 
-  <throttlePolicy limitPerSecond="1" limitPerMinute="10" limitPerHour="30" limitPerDay="300" limitPerWeek="1500" ipThrottling="true" clientThrottling="true" endpointThrottling="true">
+  <throttlePolicy  limitPerHour="2"  ipThrottling="false" clientThrottling="false" endpointThrottling="true">
   </throttlePolicy>
 
   <!--<throttlePolicy limitPerSecond="1" limitPerMinute="10" limitPerHour="30" limitPerDay="300" limitPerWeek="1500" ipThrottling="true" clientThrottling="true" endpointThrottling="true">
