--- a/MvcThrottle/MvcThrottle.csproj
+++ b/MvcThrottle/MvcThrottle.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -81,6 +82,7 @@
     <Compile Include="Configuration\ThrottlePolicyWhitelistConfigurationElement.cs" />
     <Compile Include="Models\IPAddressRange.cs" />
     <Compile Include="IThrottleLogger.cs" />
+    <Compile Include="Repositories\ConcurrentDictionaryRepository.cs" />
     <Compile Include="Repositories\IThrottleRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\IThrottlePolicyProvider.cs" />
@@ -89,6 +91,7 @@
     <Compile Include="Models\RequestIdentity.cs" />
     <Compile Include="Attributes\ThrottingAttributes.cs" />
     <Compile Include="Models\ThrottleCounter.cs" />
+    <Compile Include="Repositories\MemoryCacheRepository.cs" />
     <Compile Include="ThrottleLogEntry.cs" />
     <Compile Include="ThrottlePolicy.cs" />
     <Compile Include="Models\ThrottlePolicyRule.cs" />
